infrastructure/vnet.tf
resource "azurerm_virtual_network" "vm_net" {
  name                = "vm_net"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

resource "azurerm_subnet" "subnet" {
  name                 = "internal"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vm_net.name
  address_prefixes     = ["10.0.2.0/24"]
}
